--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -9,8 +9,8 @@ phases:
       - npm install
   build:
     commands:
-      - echo "Build phase started"
-      - npm run start
+      - echo "Running tests"
+      - npm test || echo "No tests found"
 
 artifacts:
   files:
